Fix wrapping, remove redundant CSS

--- a/media/css/protocol/components/_download-button.scss
+++ b/media/css/protocol/components/_download-button.scss
@@ -120,35 +120,38 @@ ul.download-list {
     margin-bottom: $spacing-md;
 }
 
-// Platform specific Firefox download macros (issue #12192)
+// Platform specific Firefox download macros (bedrock issue #12192)
 .firefox-platform-button {
-    .download-link.os_linux {
-        display: none;
+    .download-link.os_linux64 {
+        margin-bottom: $spacing-sm; // allow spacing between macro Linux buttons ('download-list' buttons get spacing from
     }
 
     .linux & {
-        .download-link.os_linux {
+        .download-link.os_linux64,
+        .download-link.os_linux64-aarch64 {
             display: inline-block;
         }
+    }
 
-        .download-link.os_linux64 {
-            display: inline-block;
-            margin-bottom: $spacing-sm; // allow spacing between macro Linux buttons
+    .c-linux-debian {
+        margin-top: $spacing-md;
+
+        br {
+            display: none;
         }
 
-        .c-linux-debian {
-            margin-top: $spacing-md;
-
+        @media #{$mq-md} {
             br {
-                display: none;
-            }
-
-            @media #{$mq-md} {
-                br {
-                    display: inline;
-                }
+                display: inline;
             }
         }
+    }
+}
+
+// All linux download links (issue 648)
+.linux {
+    .download-link {
+        text-wrap: balance; // TODO: update with https://github.com/mozilla/protocol/issues/1119
     }
 }
 
